--- a/index.html
+++ b/index.html
@@ -8,20 +8,19 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-	<div class="top-header">e-business card</div>
- 	<div class="ebusiness-card">
+	<div class="ebusiness-card">
     <div class="head">
       <div class="profile-image">
         <img src="/assets/avatar.jpg" alt="Picture not available">
       </div>
-      <div class="name-headline">
-        <h1><strong>Roland Elek</strong></h1>
+     <div class="name-headline">
+      <h1><strong>Roland Elek</strong></h1>
       <h2>IT Manager</h2>
-      </div>
+			<br>
+			<h3>Professional knowledge</h3>
+     </div>
   </div>
-    <div class="content">
       <div class="about">
-				<h3>Professional skills</h3>
 				<ul>
 					<li>UNIX like systems (AIX, SLES)</li>
 					<li>Oracle database</li>
@@ -31,14 +30,10 @@
 				</ul>
       </div>
       <div class="section-links">
-      <h3>Contact me</h3>
-        <ul>
-          <li><a href="www.twitter.com" title="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-          <li><a href="www.behance.net" title="behance"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
-          <li><a href="www.instagram.com" title="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-      </ul>
-      </div>
+          <a href="www.facebook.com" title="Facebook"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+         	<a href="www.linkedin.com" title="Linkedin"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+          <a href="mailto:name@gmail.com" title="e-mail"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+		</div>
   </div>
- </div>
 </body>
 </html>
