--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="ebusiness-card">
     <div class="head">
       <div class="profile-image">
-        <img src="/assets/avatar.jpg" alt="Picture not available">
+        <img src="assets/avatar.jpg" alt="Picture not available">
       </div>
      <div class="name-headline">
       <h1><strong>Roland Elek</strong></h1>
